# mkdocs-glightbox

./: .flake8  .gitignore  404.html  CHANGELOG  MANIFEST.in  README.md  deploy.sh  index.html  package.json  pyproject.toml  pytest.ini  schema.json  setup.py  sitemap.xml  update-glightbox.sh
.github/workflows/: ci.yaml  codeql-analysis.yml  deploy-release.yml  documentation.yml  performance_test.yml  scheduled_unittests.yml  unittests.yml  unittests_codecov.yml
caption/caption/: index.html
demo/: mkdocs.yml
demo-mkdocs/: mkdocs.yml
demo-mkdocs/docs/: gallery.md  index.md
demo-mkdocs/docs/caption/: caption.md
demo-mkdocs/docs/disable/: image.md  page.md
demo-mkdocs/docs/flexibility/: disable-by-page-enable-by-image.md  disable-by-page.md  enable-by-image-or-page.md
demo-mkdocs/docs/gallery/: gallery.md
demo/docs/: index.md
demo/site/: 404.html  index.html  sitemap.xml
docs/: 404.html  index.html  sitemap.xml
docs/gallery/: index.html
flexibility/disable-by-image/: index.html
flexibility/disable-by-page/: index.html
flexibility/disable-by-page-enable-by-image/: index.html
flexibility/enable-by-image-or-page/: index.html
gallery/gallery/: index.html
mkdocs_glightbox/: __init__.py  plugin.py
mkdocs_glightbox/glightbox/: LICENSE.md
site/: index.html
taiwan/mountain/: index.html
taiwan/sea/: index.html
tests/: test_builds.py  test_perf.py
tests/fixtures/: mkdocs-auto-caption.yml  mkdocs-benchmark.yml  mkdocs-disable-by-image.yml  mkdocs-edge-cases.yml  mkdocs-error.yml  mkdocs-manual.yml  mkdocs-material-custom-js.yml  mkdocs-material-emojione.yml  mkdocs-material-gemoji.yml  mkdocs-material-instant.yml  mkdocs-material-privacy.yml  mkdocs-material-template.yml  mkdocs-material-theme.yml  mkdocs-material-twemoji.yml  mkdocs-material.yml  mkdocs-options.yml  mkdocs-site-url.yml  mkdocs-target-file.yml  mkdocs.yml
(+39 files in other folders)
