[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-glightbox"
version = "0.5.0"
description = "MkDocs plugin supports image lightbox with GLightbox."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
  {name = "Blueswen", email = "blueswen.tw@gmail.com"}
]
dependencies = [
    "selectolax>=0.3.29",
]
keywords = [
    "mkdocs",
    "plugin",
    "glightbox"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Documentation",
    "Topic :: Text Processing"
]

[project.urls]
Homepage = "https://blueswen.github.io/mkdocs-glightbox/"
Source = "https://github.com/blueswen/mkdocs-glightbox"
Issues = "https://github.com/blueswen/mkdocs-glightbox/issues"
History = "https://github.com/blueswen/mkdocs-glightbox/blob/main/CHANGELOG"

[project.entry-points."mkdocs.plugins"]
glightbox = "mkdocs_glightbox.plugin:LightboxPlugin"

[dependency-groups]
dev = [
    "bandit>=1.7.10",
    "codecov>=2.1.13",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.12",
    "pytest>=8.3.5",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=5.0.0",
    "pytest-playwright>=0.5.2",
    "pytest-timeout>=2.4.0",
    "ruff>=0.11.7",
    "twine>=6.1.0",
]
